Make action column in users list unsortable | Fix: not showing  dropdown menu on Action column in users list

--- a/src/assets/components/tables/_tables.scss
+++ b/src/assets/components/tables/_tables.scss
@@ -144,11 +144,11 @@
     }
 
     .rt-resizable-header:last-child {
-      overflow: hidden
+      //overflow: hidden
     }
 
     .rt-resizable-header-content {
-      overflow: hidden;
+      //overflow: hidden;
       text-overflow: ellipsis
     }
 
